SLING-13186 Migrate to junit 5